[common] cleanup on UrlUtils